welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: '(' expected but identifier found.
	if Maths.abs(100 - n) > 10 {
           ^nearHundred:7: error: illegal start of simple expression
}
^